--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "laravel-mix": "^0.7.2",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "laravel-echo": "^1.2.3",
+    "pusher-js": "^4.0.0"
   }
 }
