--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "pusher/pusher-php-server": "^2.6"
+        "pusher/pusher-php-server": "~4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
