--- a/.env.travis
+++ b/.env.travis
@@ -7,12 +7,12 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=laravelchat
+DB_USERNAME=root
+DB_PASSWORD=
 
-BROADCAST_DRIVER=pusher
-CACHE_DRIVER=file
+BROADCAST_DRIVER=log
+CACHE_DRIVER=array
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
@@ -30,4 +30,4 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=
+PUSHER_APP_CLUSTER=mt1
